k8s/yopass/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yopass
  namespace: yopass
  labels:
    app: yopass
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yopass
  template:
    metadata:
      labels:
        app: yopass
    spec:
      containers:
        - name: yopass
          image: jhaals/yopass:latest
          args:
            - "--database=redis"
            - "--redis=redis://redis:6379/0"
          ports:
            - name: http
              containerPort: 1337
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
