k8s/yopass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yopass
  namespace: yopass
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - yopass.radioco.local
      secretName: yopass-tls
  rules:
    - host: yopass.radioco.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yopass
                port:
                  number: 80
